fix(css): prevent `chart-outer` from overflowing the chart

--- a/src/styles/_chart-layout.scss
+++ b/src/styles/_chart-layout.scss
@@ -25,7 +25,7 @@
 
   .chart-outer {
     overflow-x: auto;
-    -webkit-overflow-scrolling: touch;
+    overflow-y: hidden;
     flex: 1;
   }
 
